// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`freetype2 NewMemoryFace loadChar load something 1`] = `
{
  "bitmap": null,
  "bitmapLeft": null,
  "bitmapTop": null,
  "format": 1869968492,
  "lsbDelta": 0,
  "metrics": {
    "height": 448,
    "horiAdvance": 320,
    "horiBearingX": 0,
    "horiBearingY": 384,
    "isFontUnits": false,
    "vertAdvance": 768,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 384,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadChar render something 1`] = `
{
  "bitmap": {
    "buffer": {
      "data": [
        8,
        0,
        8,
        0,
        56,
        0,
        36,
        0,
        36,
        0,
        94,
        0,
        66,
        0,
        67,
        0,
      ],
      "type": "Buffer",
    },
    "height": 8,
    "numGrays": null,
    "pitch": 2,
    "pixelMode": 1,
    "width": 9,
  },
  "bitmapLeft": 0,
  "bitmapTop": 8,
  "format": 1651078259,
  "lsbDelta": 0,
  "metrics": {
    "height": 576,
    "horiAdvance": 576,
    "horiBearingX": 0,
    "horiBearingY": 576,
    "isFontUnits": false,
    "vertAdvance": 768,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 576,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadChar render something 2`] = `
{
  "bitmap": {
    "buffer": {
      "data": [
        12,
        24,
        24,
        24,
        15,
        0,
        0,
        0,
        0,
        13,
        138,
        255,
        39,
        62,
        107,
        167,
        28,
        0,
        0,
        51,
        255,
        8,
        0,
        0,
        90,
        238,
        27,
        0,
        48,
        255,
        8,
        0,
        0,
        0,
        205,
        149,
        0,
        48,
        255,
        8,
        0,
        0,
        0,
        142,
        206,
        0,
        48,
        255,
        8,
        0,
        0,
        0,
        147,
        204,
        0,
        48,
        255,
        8,
        0,
        0,
        0,
        206,
        153,
        0,
        63,
        255,
        12,
        0,
        0,
        91,
        242,
        35,
        31,
        178,
        255,
        106,
        56,
        98,
        167,
        36,
        0,
      ],
      "type": "Buffer",
    },
    "height": 9,
    "numGrays": 256,
    "pitch": 9,
    "pixelMode": 2,
    "width": 9,
  },
  "bitmapLeft": 0,
  "bitmapTop": 9,
  "format": 1651078259,
  "lsbDelta": 0,
  "metrics": {
    "height": 576,
    "horiAdvance": 576,
    "horiBearingX": 0,
    "horiBearingY": 576,
    "isFontUnits": false,
    "vertAdvance": 768,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 576,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadChar scale metrics 1`] = `
{
  "bitmap": null,
  "bitmapLeft": null,
  "bitmapTop": null,
  "format": 1869968492,
  "lsbDelta": 0,
  "metrics": {
    "height": 677,
    "horiAdvance": 720,
    "horiBearingX": 5,
    "horiBearingY": 677,
    "isFontUnits": true,
    "vertAdvance": 1000,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 710,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadChar scale metrics 2`] = `
{
  "bitmap": null,
  "bitmapLeft": null,
  "bitmapTop": null,
  "format": 1869968492,
  "lsbDelta": 0,
  "metrics": {
    "height": 576,
    "horiAdvance": 576,
    "horiBearingX": 0,
    "horiBearingY": 576,
    "isFontUnits": false,
    "vertAdvance": 768,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 576,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadGlyph load something 1`] = `
{
  "bitmap": null,
  "bitmapLeft": null,
  "bitmapTop": null,
  "format": 1869968492,
  "lsbDelta": 0,
  "metrics": {
    "height": 896,
    "horiAdvance": 704,
    "horiBearingX": 0,
    "horiBearingY": 832,
    "isFontUnits": false,
    "vertAdvance": 1152,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 832,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadGlyph render something 1`] = `
{
  "bitmap": {
    "buffer": {
      "data": [
        124,
        0,
        68,
        0,
        68,
        0,
        100,
        0,
        56,
        0,
        88,
        128,
        153,
        0,
        141,
        0,
        134,
        0,
        130,
        0,
        195,
        0,
        124,
        224,
      ],
      "type": "Buffer",
    },
    "height": 12,
    "numGrays": null,
    "pitch": 2,
    "pixelMode": 1,
    "width": 12,
  },
  "bitmapLeft": 1,
  "bitmapTop": 12,
  "format": 1651078259,
  "lsbDelta": 0,
  "metrics": {
    "height": 896,
    "horiAdvance": 704,
    "horiBearingX": 0,
    "horiBearingY": 832,
    "isFontUnits": false,
    "vertAdvance": 1152,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 832,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadGlyph render something 2`] = `
{
  "bitmap": {
    "buffer": {
      "data": [
        0,
        0,
        0,
        43,
        73,
        67,
        3,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        90,
        105,
        0,
        59,
        194,
        2,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        207,
        29,
        0,
        0,
        225,
        47,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        203,
        103,
        0,
        10,
        246,
        22,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        123,
        236,
        26,
        116,
        121,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        9,
        220,
        208,
        61,
        0,
        14,
        75,
        76,
        76,
        25,
        0,
        0,
        0,
        69,
        126,
        253,
        133,
        0,
        0,
        42,
        229,
        51,
        0,
        0,
        0,
        95,
        144,
        0,
        131,
        253,
        68,
        0,
        29,
        82,
        0,
        0,
        0,
        26,
        244,
        47,
        0,
        3,
        197,
        232,
        23,
        70,
        1,
        0,
        0,
        0,
        93,
        252,
        2,
        0,
        0,
        31,
        239,
        189,
        60,
        0,
        0,
        0,
        0,
        99,
        255,
        33,
        0,
        0,
        0,
        85,
        255,
        113,
        0,
        0,
        0,
        0,
        39,
        251,
        146,
        0,
        0,
        0,
        45,
        151,
        251,
        78,
        0,
        0,
        7,
        0,
        102,
        244,
        155,
        81,
        95,
        38,
        0,
        112,
        240,
        140,
        83,
        53,
        0,
        0,
        13,
        53,
        27,
        0,
        0,
        0,
        0,
        13,
        55,
        35,
        0,
      ],
      "type": "Buffer",
    },
    "height": 14,
    "numGrays": 256,
    "pitch": 13,
    "pixelMode": 2,
    "width": 13,
  },
  "bitmapLeft": 0,
  "bitmapTop": 13,
  "format": 1651078259,
  "lsbDelta": 0,
  "metrics": {
    "height": 896,
    "horiAdvance": 704,
    "horiBearingX": 0,
    "horiBearingY": 832,
    "isFontUnits": false,
    "vertAdvance": 1152,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 832,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadGlyph scale metrics 1`] = `
{
  "bitmap": null,
  "bitmapLeft": null,
  "bitmapTop": null,
  "format": 1869968492,
  "lsbDelta": 0,
  "metrics": {
    "height": 705,
    "horiAdvance": 627,
    "horiBearingX": 30,
    "horiBearingY": 691,
    "isFontUnits": true,
    "vertAdvance": 1000,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 672,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadGlyph scale metrics 2`] = `
{
  "bitmap": null,
  "bitmapLeft": null,
  "bitmapTop": null,
  "format": 1869968492,
  "lsbDelta": 0,
  "metrics": {
    "height": 1024,
    "horiAdvance": 384,
    "horiBearingX": 0,
    "horiBearingY": 832,
    "isFontUnits": false,
    "vertAdvance": 1152,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 320,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace renderGlyph ok 1`] = `
{
  "bitmap": {
    "buffer": {
      "data": [
        0,
        0,
        0,
        0,
        0,
        0,
        6,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        160,
        3,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        47,
        255,
        77,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        114,
        254,
        178,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        27,
        60,
        191,
        252,
        26,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        87,
        0,
        90,
        255,
        123,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        12,
        72,
        0,
        7,
        237,
        222,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        87,
        27,
        24,
        24,
        159,
        255,
        68,
        0,
        0,
        0,
        0,
        0,
        3,
        107,
        68,
        68,
        68,
        90,
        255,
        169,
        0,
        0,
        0,
        0,
        0,
        70,
        13,
        0,
        0,
        0,
        0,
        205,
        249,
        20,
        0,
        0,
        0,
        0,
        122,
        0,
        0,
        0,
        0,
        0,
        119,
        255,
        115,
        0,
        0,
        0,
        84,
        159,
        0,
        0,
        0,
        0,
        0,
        73,
        255,
        233,
        15,
        0,
        83,
        237,
        238,
        104,
        3,
        0,
        0,
        64,
        180,
        255,
        255,
        186,
        60,
      ],
      "type": "Buffer",
    },
    "height": 13,
    "numGrays": 256,
    "pitch": 13,
    "pixelMode": 2,
    "width": 13,
  },
  "bitmapLeft": 0,
  "bitmapTop": 13,
}
`;

exports[`freetype2 NewMemoryFace renderGlyph ok 2`] = `
{
  "bitmap": {
    "buffer": {
      "data": [
        0,
        0,
        0,
        0,
        0,
        0,
        6,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        160,
        3,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        47,
        255,
        77,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        114,
        254,
        178,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        27,
        60,
        191,
        252,
        26,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        87,
        0,
        90,
        255,
        123,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        12,
        72,
        0,
        7,
        237,
        222,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        87,
        27,
        24,
        24,
        159,
        255,
        68,
        0,
        0,
        0,
        0,
        0,
        3,
        107,
        68,
        68,
        68,
        90,
        255,
        169,
        0,
        0,
        0,
        0,
        0,
        70,
        13,
        0,
        0,
        0,
        0,
        205,
        249,
        20,
        0,
        0,
        0,
        0,
        122,
        0,
        0,
        0,
        0,
        0,
        119,
        255,
        115,
        0,
        0,
        0,
        84,
        159,
        0,
        0,
        0,
        0,
        0,
        73,
        255,
        233,
        15,
        0,
        83,
        237,
        238,
        104,
        3,
        0,
        0,
        64,
        180,
        255,
        255,
        186,
        60,
      ],
      "type": "Buffer",
    },
    "height": 13,
    "numGrays": 256,
    "pitch": 13,
    "pixelMode": 2,
    "width": 13,
  },
  "bitmapLeft": 0,
  "bitmapTop": 13,
}
`;

exports[`freetype2 NewMemoryFace renderGlyph ok 3`] = `
{
  "bitmap": {
    "buffer": {
      "data": [
        0,
        0,
        0,
        0,
        0,
        0,
        6,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        160,
        3,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        47,
        255,
        77,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        114,
        254,
        178,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        27,
        60,
        191,
        252,
        26,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        87,
        0,
        90,
        255,
        123,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        12,
        72,
        0,
        7,
        237,
        222,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        87,
        27,
        24,
        24,
        159,
        255,
        68,
        0,
        0,
        0,
        0,
        0,
        3,
        107,
        68,
        68,
        68,
        90,
        255,
        169,
        0,
        0,
        0,
        0,
        0,
        70,
        13,
        0,
        0,
        0,
        0,
        205,
        249,
        20,
        0,
        0,
        0,
        0,
        122,
        0,
        0,
        0,
        0,
        0,
        119,
        255,
        115,
        0,
        0,
        0,
        84,
        159,
        0,
        0,
        0,
        0,
        0,
        73,
        255,
        233,
        15,
        0,
        83,
        237,
        238,
        104,
        3,
        0,
        0,
        64,
        180,
        255,
        255,
        186,
        60,
      ],
      "type": "Buffer",
    },
    "height": 13,
    "numGrays": 256,
    "pitch": 13,
    "pixelMode": 2,
    "width": 13,
  },
  "bitmapLeft": 0,
  "bitmapTop": 13,
}
`;
